feat: complement multiple transformation option
